# ice-proxy

./: ice-proxy.cabal  stack.yaml
app/: Main.hs
src/: Ice.hs
